[package]
name = "xtraceroute"
version = "0.1.0"
authors = ["Steffen <gerdes.steffen@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "1.0.6"
pnet = "0.27.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"

